# docstore

./: .env.example  .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.agents/skills/docstore/: SKILL.md
.agents/skills/docstore/agents/: openai.yaml
.claude/: docstore_desktop_config.example.json  settings.json
.claude/skills/run-docstore/: SKILL.md
.codex/: config.example.toml
.github/workflows/: docs.yml  lint.yml  test.yml
docs/: cli-reference.md  getting-started.md  index.md  integrations.md
docstore/: __init__.py  cli.py  config.py  llm.py  schema.py  server.py  store.py
docstore/agents/: __init__.py  compiler.py  differ.py  extractor.py  orchestrator.py  parser.py  validator.py
examples/: invoice_example.py
scripts/: benchmark.py  debug_playwright.js  generate_pdf_contracts.py  generate_txt_invoices.py
tests/: test_agents.py  test_benchmark.py  test_cli_helpers.py  test_filter_eval.py  test_llm.py  test_parser.py  test_schema.py  test_store.py
