[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docstore"
version = "0.1.0"
description = "dbt for unstructured data — extract once, query forever"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["llm", "documents", "extraction", "cache", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.25.0",
    "pydantic>=2.0",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "typer>=0.12",
    "rich>=13.0",
    "mcp>=1.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "tqdm>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
docstore = "docstore.cli:app"
docstore-server = "docstore.server:main"

[tool.setuptools.packages.find]
include = ["docstore*"]
exclude = ["tests*", "examples*", "scripts*", "sample_invoices*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
